Add Post components

--- a/frontend/src/pages/home/style.css
+++ b/frontend/src/pages/home/style.css
@@ -12,7 +12,9 @@
 }
 @media (max-width: 1175px) {
   .stories,
-  .createPost {
+  .createPost,
+  .post,
+  .send_verification {
     width: 84%;
   }
   .home_middle {
@@ -56,12 +58,16 @@
     width: 20px;
   }
   .stories,
-  .createPost {
+  .createPost,
+  .post,
+  .send_verification {
     width: 100%;
   }
 }
 @media (max-width: 960px) {
-  .createPost {
+  .createPost,
+  .post,
+  .send_verification {
     width: 93%;
   }
   .stories {
@@ -88,11 +94,13 @@
   .right_home {
     display: none;
   }
-  .createPost {
+  .createPost,
+  .post,
+  .send_verification {
     width: 110%;
   }
   .stories {
-    width: 113%;
+    width: 112%;
   }
   .home_middle {
     margin-left: 9%;
@@ -100,7 +108,7 @@
 }
 @media (max-width: 805px) {
   .stories {
-    grid-template-columns: repeat(6, 13vw);
+    grid-template-columns: repeat(6, 12.7vw);
   }
   .story_profile_name,
   .story_create_text {
@@ -132,7 +140,9 @@
     margin-left: 0;
   }
   .stories,
-  .createPost {
+  .createPost,
+  .post,
+  .send_verification {
     width: 100%;
   }
   .stories .white_circle {
